contrast fix

--- a/curatescape-echo/css/screen.css
+++ b/curatescape-echo/css/screen.css
@@ -1848,6 +1848,10 @@ header.primary nav #nav-interactive a > i {
   background: var(--site-header-bg-color-2);
 }
 
+#home-cta .cta-main a {
+  color: var(--text-base-on-dark);
+}
+
 @media all and (max-width: 950px) {
   .home-project-meta {
     flex-direction: column;
